swen430as1/tests/valid/real/Real_Valid_10.while
void main() {
    {real f, int g} r = {f:1, g:2};
    //
    assert r == {f:1.0, g:2.0};
}
