swen430as1/tests/invalid/real/Real_Invalid_04.while
void main() {
    assert 0a.00 == 0.0;
}
